--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <title>Need to be updated</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,16 +27,17 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="react/react.js"></script>
-    <script src="react/JSXTransformer.js"></script>
+    <script src="src/script/thirdparty/react/react.js"></script>
+    <script src="src/script/thirdparty/react/JSXTransformer.js"></script>
   </head>
   <body>
+
     <div id="example"></div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="src/script/thirdparty/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
